k8s-prod/karmadb-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karma-prod-namespace
