k8s-prod/karma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karma-api-k8s-service
  namespace: karma-prod-namespace
  labels:
    app: karma-api-k8s-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: karma-api-k8s
