k8s-prod/karma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karma-api-ingress
  namespace: karma-prod-namespace
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: karma-api-k8s-service
            port:
              number: 8080
